[package]
name = "javalocate"
version = "0.5.0"
description = "Command line utility to find JVM versions on macOS, Linux and Windows"
license = "Apache-2.0"
repository = "https://github.com/dameikle/javalocate"
edition = "2021"


[dependencies]
clap = { version = "3.1.5", features = ["derive"] }
plist = "1"
java-properties = "1.4.0"
exitcode = "1.1.2"
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.10"
