[package]
name = "javalocate"
version = "0.7.0"
description = "Command line utility to find JVM versions on macOS, Linux and Windows"
license = "Apache-2.0"
repository = "https://github.com/dameikle/javalocate"
edition = "2021"


[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
plist = "1"
java-properties = "2.0.0"
exitcode = "1.1.2"
confy = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52.0"
